@@ -387,8 +387,8 @@ analyze = function(
   osc_dB = NULL,
   pitchPlot = list(col = rgb(0, 0, 1, .75), lwd = 3, showPrior = TRUE),
   ylim = NULL,
-  xlab = 'Time, ms',
-  ylab = 'kHz',
+  xlab = 'Time',
+  ylab = 'Frequency',
   main = NULL,
   width = 900,
   height = 500,
