@@ -61,8 +61,8 @@ analyze(
   osc_dB = NULL,
   pitchPlot = list(col = rgb(0, 0, 1, 0.75), lwd = 3, showPrior = TRUE),
   ylim = NULL,
-  xlab = "Time, ms",
-  ylab = "kHz",
+  xlab = "Time",
+  ylab = "Frequency",
   main = NULL,
   width = 900,
   height = 500,
